--- a/frontend/src/Screens/Signup/Signup.css
+++ b/frontend/src/Screens/Signup/Signup.css
@@ -1,31 +1,80 @@
-body{
-    margin: 0%;
-}
-.signup{
-    background: url('./Register.png') no-repeat;
-    max-width: 100%;
-    max-height: 100%;
-}
-.signup .container{
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
+
+.signup .container {
     display: flex;
+    margin-top: 2%;
+    /* margin-right: 0%; */
+    /* margin-left: 0%; */
 }
-.signup .container1{
-    background-color: lightblue;
+
+.signup .title{
+    color: #3B5999;
+    font-weight: bold;
+}
+.signup .container1 {
+    /* border: 2px red solid; */
     width: 60%;
+    padding: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
     position: relative;
     display: inline-block;
     text-align: center;
 }
 
-.signup .container2{
-    width: 35%;
+.signup .container2 {
+    width: 40%;
     display: inline-block;
     text-align: center;
+   /*  border: 2px red solid; */
 }
 
+.signup .container2 img {
+    width: 100%;
+    height: 100%;
+}
 
-.signup .container2 img{
-    width: 90%;
-    margin-top: 35%;
-    margin-right: 12%;
+.signup .social-login button {
+    padding: 5% 10%;
+    border: none;
+    background-color: transparent;
+}
+
+.signup .social-login a {
+    font-size: 2rem;
+}
+
+.fa-google {
+    background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+}
+
+.fa-facebook {
+    color: #1877F2;
+    text-decoration: none;
+}
+
+.fa-apple {
+    color: #000000;
+    text-decoration: none;
+}
+.fa-apple:hover {
+    color: #000000;
+}
+
+.signup .btn{
+    background-color: #3B5999;
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+input[type="email"]:focus,
+input[type="password"]:focus,
+select:focus{
+    border: 3px #3B5999 solid;
+    box-shadow: none;
 }
