--- a/frontend/src/Components/KeyBenefit/KeyBenefit.css
+++ b/frontend/src/Components/KeyBenefit/KeyBenefit.css
@@ -45,6 +45,14 @@
 
 .cow-img
 {
-    padding: 0% 10%;
+    padding: 0% 0%;
 }
 
+
+@media only screen and (min-width: 992px) 
+{
+    .cow-img
+    {
+        padding: 0% 10%;
+    }
+}
