--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -3,13 +3,13 @@
     overflow-x: hidden;
 }
 
-.form-label
+.label-batch .form-label
 {
     font-size: 18px;
     font-weight: 400;
 }
 
-.form-section
+.form-section .batch-form-section
 {
     background-color: #E9EFF4;
 }
